--- a/index.html
+++ b/index.html
@@ -82,25 +82,35 @@
             <div class="carousel-item active">
               <img
                 srcset="
-                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_Te.webp  350w,
-                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp    1414w
+                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.webp   600w,
+                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-desktop.webp 1200w
                 "
-                sizes="(max-width: 650px) 350px"
-                src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+                sizes="(max-width: 650px) 600px"
+                src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-desktop.webp"
                 class="d-block w-100"
-                alt="ryoji iwata"
+                alt="ryoji iwata homme qui marche"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+                srcset="
+                  ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.webp   600w,
+                  ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-desktop.webp 1200w
+                "
+                sizes="(max-width: 650px) 600px"
+                src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-desktop.webp"
                 class="d-block w-100"
                 alt="nicholas green"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+                srcset="
+                  ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.webp   600w,
+                  ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-desktop.webp 1200w
+                "
+                sizes="(max-width: 650px) 600px"
+                src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-desktop.webp"
                 class="d-block w-100"
                 alt="edward cisneros"
               />
@@ -128,7 +138,17 @@
       </div>
       <div id="about">
         <div class="picture left">
-          <img src="./assets/images/nina-desktop.webp" alt="nina carducci" />
+          <img
+            srcset="
+              ./assets/images/nina-mobile.webp   600w,
+              ./assets/images/nina-desktop.webp 1200w
+            "
+            sizes="(max-width: 650px) 600px"
+            src="./assets/images/nina-desktop.webp"
+            alt="nina carducci"
+            width="400"
+            height="400"
+          />
         </div>
         <div id="about-me">
           <h2 class="about-me__title">A propos de moi</h2>
@@ -158,56 +178,128 @@
             <img
               data-gallery-tag="Concert"
               class="gallery-item"
+              srcset="
+                ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
               src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-desktop.webp"
-              alt="aaron paul concert"
+              alt="aaron paul concerts"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-              alt="ali morshedlou entreprise"
+              srcset="
+                ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
+              src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-desktop.webp"
+              alt="ali morshedlou entreprises"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-              alt="jason goodman entreprise"
+              srcset="
+                ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
+              src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-desktop.webp"
+              alt="jason goodman entreprises"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
+              srcset="
+                ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
               src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-              alt="hannah busing mariage"
+              alt="hannah busing mariages"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
-              src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-              alt="ade tunji portrait"
+              srcset="
+                ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
+              src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-desktop.webp"
+              alt="ade tunji portraits"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
-              src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-              alt="jakob owens mariage"
+              srcset="
+                ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
+              src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-desktop.webp"
+              alt="jakob owens mariages"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
-              src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-              alt="nino van prattenburg portrait"
+              srcset="
+                ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
+              src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-desktop.webp"
+              alt="nino van prattenburg portraits"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Concert"
               class="gallery-item"
-              src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-              alt="austin neil concert"
+              srcset="
+                ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
+              src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-desktop.webp"
+              alt="austin neil concerts"
+              width="440"
+              height="440"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-              alt="mateus campos felipe entreprise"
+              srcset="
+                ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-mobile.webp   600w,
+                ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-desktop.webp 1200w
+              "
+              sizes="(max-width: 650px) 600px"
+              src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-desktop.webp"
+              alt="mateus campos felipe entreprises"
+              width="440"
+              height="440"
+              loading="lazy"
             />
           </div>
         </div>
