--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,8 +16,81 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8" />
-    <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+    <link rel="icon" type="image/webp" href="./assets/images/Favicon.webp" />
+    <title>Nina Carducci</title>
+    <meta
+      name="description"
+      content="Ce que je vous propose : saisir de merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos. Nina / Photographe"
+    />
+    <meta property="og:title" content="Photographe, Nina Carducci" />
+    <meta
+      property="og:description"
+      content="Partez à la découverte de l'univers visuel de Nina Carducci Photography, par le biais d'un galerie d'image saisissantes, immortalisant des moments uniques grâce à nos tarifs abordables"
+    />
+    <meta
+      property="og:url"
+      content="https://github.com/alxmsa/Debuggez_et_optimisez_un_site_de_photographe"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/alxmsa/Debuggez_et_optimisez_un_site_de_photographe/tree/master/assets/images"
+    />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:title" content="Photographe, Nina Carducci" />
+    <meta
+      name="twitter:description"
+      content="Partez à la découverte de l'univers visuel de Nina Carducci Photography, par le biais d'un galerie d'image saisissantes, immortalisant des moments uniques grâce à nos tarifs abordables"
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/alxmsa/Debuggez_et_optimisez_un_site_de_photographe/tree/master/assets/images"
+    />
+    <meta
+      name="twitter:url"
+      content="https://github.com/alxmsa/Debuggez_et_optimisez_un_site_de_photographe"
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "PhotographieService",
+        "name": "Photographe, Nina Carducci",
+        "description": "Partez à la découverte de l'univers visuel de Nina Carducci Photography, par le biais d'un galerie d'image saisissantes, immortalisant des moments uniques grâce à nos tarifs abordables",
+        "url": "https://ennlco.github.io/Debuggez_et_optimisez_un_site_de_photographe/",
+        "image": "https://ennlco.github.io/Debuggez_et_optimisez_un_site_de_photographe/assets/images/nina.Webp",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "addressLocality": "Bordeaux",
+          "postalCode": "33200",
+          "addressCountry": "France"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "05-56-67-78-89",
+          "contactType": "Service client",
+          "hoursAvailable": [
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday"
+              ],
+              "opens": "10:00",
+              "closes": "19:00"
+            }
+          ]
+        }
+      }
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -19,11 +98,6 @@
     ></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
-    <title>Nina Carducci</title>
-    <meta
-      name="description"
-      content="Ce que je vous propose : saisir de merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos. Nina / Photographe"
-    />
   </head>
   <body>
     <header>
@@ -42,7 +116,9 @@
                 target="_blank"
                 ><img
                   src="assets/images/instagram.webp"
-                  alt="visitez mon profil instagram"
+                  alt="icone logo instagram"
+                  width="20"
+                  height="20"
               /></a>
             </li>
           </ul>
@@ -82,37 +158,45 @@
             <div class="carousel-item active">
               <img
                 srcset="
-                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.webp   600w,
-                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-desktop.webp 1200w
+                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.webp   350w,
+                  ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-desktop.webp 1414w
                 "
-                sizes="(max-width: 650px) 600px"
-                src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-desktop.webp"
+                sizes="(max-width: 650px) 350px"
+                src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
                 class="d-block w-100"
-                alt="ryoji iwata homme qui marche"
+                alt="homme qui marche"
+                width="auto"
+                height="auto"
               />
             </div>
             <div class="carousel-item">
               <img
                 srcset="
-                  ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.webp   600w,
-                  ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-desktop.webp 1200w
+                  ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.webp   350w,
+                  ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-desktop.webp 1414w
                 "
-                sizes="(max-width: 650px) 600px"
-                src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-desktop.webp"
+                sizes="(max-width: 650px) 350px"
+                src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
                 class="d-block w-100"
-                alt="nicholas green"
+                alt="public"
+                width="auto"
+                height="auto"
+                loading="lazy"
               />
             </div>
             <div class="carousel-item">
               <img
                 srcset="
-                  ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.webp   600w,
-                  ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-desktop.webp 1200w
+                  ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.webp   350w,
+                  ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-desktop.webp 1414w
                 "
-                sizes="(max-width: 650px) 600px"
-                src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-desktop.webp"
+                sizes="(max-width: 650px) 350px"
+                src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
                 class="d-block w-100"
-                alt="edward cisneros"
+                alt="mariés qui s'embrasse"
+                width="auto"
+                height="auto"
+                loading="lazy"
               />
             </div>
           </div>
@@ -123,7 +207,7 @@
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden" style="color: #575757">Previous</span>
           </button>
           <button
             class="carousel-control-next"
@@ -132,7 +216,7 @@
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden" style="color: #575757">Next</span>
           </button>
         </div>
       </div>
@@ -140,10 +224,10 @@
         <div class="picture left">
           <img
             srcset="
-              ./assets/images/nina-mobile.webp   600w,
-              ./assets/images/nina-desktop.webp 1200w
+              ./assets/images/nina-mobile.webp  250w,
+              ./assets/images/nina-desktop.webp 400w
             "
-            sizes="(max-width: 650px) 600px"
+            sizes="(max-width: 650px) 250px"
             src="./assets/images/nina-desktop.webp"
             alt="nina carducci"
             width="400"
@@ -179,10 +263,10 @@
               data-gallery-tag="Concert"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-mobile.webp  306w,
+                ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 306px"
               src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-desktop.webp"
               alt="aaron paul concerts"
               width="440"
@@ -193,10 +277,10 @@
               data-gallery-tag="Entreprises"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-mobile.webp  280w,
+                ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 280px"
               src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-desktop.webp"
               alt="ali morshedlou entreprises"
               width="440"
@@ -207,10 +291,10 @@
               data-gallery-tag="Entreprises"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-mobile.webp  291w,
+                ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 291px"
               src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-desktop.webp"
               alt="jason goodman entreprises"
               width="440"
@@ -221,10 +305,10 @@
               data-gallery-tag="Mariages"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-mobile.webp  307w,
+                ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 307px"
               src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
               alt="hannah busing mariages"
               width="440"
@@ -235,10 +319,10 @@
               data-gallery-tag="Portrait"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-mobile.webp  277w,
+                ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 277px"
               src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-desktop.webp"
               alt="ade tunji portraits"
               width="440"
@@ -249,10 +333,10 @@
               data-gallery-tag="Mariages"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-mobile.webp  300w,
+                ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 300px"
               src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-desktop.webp"
               alt="jakob owens mariages"
               width="440"
@@ -263,10 +347,10 @@
               data-gallery-tag="Portrait"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-mobile.webp  303w,
+                ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 303px"
               src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-desktop.webp"
               alt="nino van prattenburg portraits"
               width="440"
@@ -277,10 +361,10 @@
               data-gallery-tag="Concert"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-mobile.webp  455w,
+                ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 455px"
               src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-desktop.webp"
               alt="austin neil concerts"
               width="440"
@@ -291,10 +375,10 @@
               data-gallery-tag="Entreprises"
               class="gallery-item"
               srcset="
-                ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-mobile.webp   600w,
-                ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-desktop.webp 1200w
+                ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-mobile.webp  424w,
+                ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-desktop.webp 600w
               "
-              sizes="(max-width: 650px) 600px"
+              sizes="(max-width: 650px) 424px"
               src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-desktop.webp"
               alt="mateus campos felipe entreprises"
               width="440"
@@ -411,6 +495,7 @@
               alt="appareil photo"
               width="400"
               height="400"
+              loading="lazy"
             />
           </div>
         </div>
