--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,12 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-      rel="stylesheet"
-    />
+
     <link rel="icon" type="image/webp" href="./assets/images/Favicon.webp" />
     <title>Nina Carducci</title>
     <meta
@@ -96,8 +97,6 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/maugallery.js"></script>
-    <script src="./assets/scripts.js"></script>
   </head>
   <body>
     <header>
@@ -162,7 +161,7 @@
                   ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-desktop.webp 1414w
                 "
                 sizes="(max-width: 650px) 350px"
-                src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+                src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-desktop.webp.webp"
                 class="d-block w-100"
                 alt="homme qui marche"
                 width="auto"
@@ -232,6 +231,7 @@
             alt="nina carducci"
             width="400"
             height="400"
+            loading="lazy"
           />
         </div>
         <div id="about-me">
@@ -502,5 +502,7 @@
       </div>
     </main>
     <footer></footer>
+    <script src="./assets/maugallery.js"></script>
+    <script src="./assets/scripts.js"></script>
   </body>
 </html>
