--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
-        "@type": "PhotographieService",
+        "@type": "LocalBusiness",
         "name": "Photographe, Nina Carducci",
         "description": "Partez à la découverte de l'univers visuel de Nina Carducci Photography, par le biais d'un galerie d'image saisissantes, immortalisant des moments uniques grâce à nos tarifs abordables",
-        "url": "https://ennlco.github.io/Debuggez_et_optimisez_un_site_de_photographe/",
-        "image": "https://ennlco.github.io/Debuggez_et_optimisez_un_site_de_photographe/assets/images/nina.Webp",
+        "url": "https://github.com/alxmsa/Debuggez_et_optimisez_un_site_de_photographe",
+        "image": "https://github.com/alxmsa/Debuggez_et_optimisez_un_site_de_photographe/tree/master/assets/images",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "68 avenue Alsace-Lorraine",
@@ -125,7 +125,7 @@
       </div>
     </header>
     <main>
-      <div id="header">
+      <section id="header">
         <div
           id="carouselExampleIndicators"
           class="carousel slide"
@@ -218,8 +218,8 @@
             <span class="visually-hidden" style="color: #575757">Next</span>
           </button>
         </div>
-      </div>
-      <div id="about">
+      </section>
+      <section id="about">
         <div class="picture left">
           <img
             srcset="
@@ -254,8 +254,8 @@
             yeux sur vos photos.
           </p>
         </div>
-      </div>
-      <div id="gallery">
+      </section>
+      <section id="gallery">
         <h2 class="title">Portfolio</h2>
         <div class="container py-3">
           <div class="gallery" style="display: none">
@@ -309,7 +309,7 @@
                 ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-desktop.webp 600w
               "
               sizes="(max-width: 650px) 307px"
-              src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+              src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-desktop.webp"
               alt="hannah busing mariages"
               width="440"
               height="440"
@@ -401,8 +401,8 @@
             <figcaption class="quote__author">- Richard Avedon</figcaption>
           </figure>
         </div>
-      </div>
-      <div id="services">
+      </section>
+      <section id="services">
         <h2 class="title">Mes services</h2>
         <div class="container">
           <div class="service">
@@ -447,8 +447,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="quote">
+      </section>
+      <section class="quote">
         <figure>
           <blockquote>
             <h1 class="quote__text">
@@ -459,8 +459,8 @@
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
-      </div>
-      <div id="contact">
+      </section>
+      <section id="contact">
         <h2>Contact</h2>
         <div class="container">
           <div class="form-container">
@@ -499,7 +499,7 @@
             />
           </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer></footer>
     <script src="./assets/maugallery.js"></script>
